# anonymizer

./: Cargo.toml
schemas/: http_log.capnp
src/: build.rs  ddl.rs  http_log_capnp.rs  log_row.rs  main.rs  producer.rs
src/schemas/: http_log_capnp.rs
